{
  "version": 4,
  "terraform_version": "0.14.11",
  "serial": 88,
  "lineage": "d0b242d3-7b4c-c1f8-0b85-b5eb9f0d75b8",
  "resources": [
    {
      "module": "module.aws-eks-accelerator-for-terraform.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:524517701320:security-group/sg-03910354970452c51",
            "description": "EKS cluster security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03910354970452c51",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f625e6d0296c7db3"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the EKS cluster API.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0901f70a033368003"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "cust01-preprod-dev-eks20211026031900169800000008",
            "name_prefix": "cust01-preprod-dev-eks",
            "owner_id": "524517701320",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cust01-preprod-dev-eks-eks_cluster_sg",
              "created-by": "Terraform v0.14.11",
              "environment": "preprod",
              "name": "cust01-preprod-dev-eks",
              "resource": "eks",
              "tenant": "cust01",
              "zone": "dev"
            },
            "tags_all": {
              "Name": "cust01-preprod-dev-eks-eks_cluster_sg",
              "created-by": "Terraform v0.14.11",
              "environment": "preprod",
              "name": "cust01-preprod-dev-eks",
              "resource": "eks",
              "tenant": "cust01",
              "zone": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bfa9f20a79addf99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aws-eks-accelerator-for-terraform.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:524517701320:security-group/sg-0901f70a033368003",
            "description": "Security group for all nodes in the cluster.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow nodes all egress to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0901f70a033368003",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03910354970452c51"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow workers pods to receive communication from the cluster control plane.",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03910354970452c51"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "cust01-preprod-dev-eks20211026031900150100000007",
            "name_prefix": "cust01-preprod-dev-eks",
            "owner_id": "524517701320",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cust01-preprod-dev-eks-eks_worker_sg",
              "created-by": "Terraform v0.14.11",
              "environment": "preprod",
              "kubernetes.io/cluster/cust01-preprod-dev-eks": "owned",
              "name": "cust01-preprod-dev-eks",
              "resource": "eks",
              "tenant": "cust01",
              "zone": "dev"
            },
            "tags_all": {
              "Name": "cust01-preprod-dev-eks-eks_worker_sg",
              "created-by": "Terraform v0.14.11",
              "environment": "preprod",
              "kubernetes.io/cluster/cust01-preprod-dev-eks": "owned",
              "name": "cust01-preprod-dev-eks",
              "resource": "eks",
              "tenant": "cust01",
              "zone": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bfa9f20a79addf99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aws-eks-accelerator-for-terraform.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-3140509190",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-03910354970452c51",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.cluster",
            "module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aws-eks-accelerator-for-terraform.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-1860541211",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03910354970452c51",
            "self": false,
            "source_security_group_id": "sg-0901f70a033368003",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.cluster",
            "module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.workers",
            "module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aws-eks-accelerator-for-terraform.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-3333401888",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0901f70a033368003",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.workers",
            "module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aws-eks-accelerator-for-terraform.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-3847132684",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0901f70a033368003",
            "self": false,
            "source_security_group_id": "sg-03910354970452c51",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.cluster",
            "module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.workers",
            "module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aws-eks-accelerator-for-terraform.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-2832859109",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0901f70a033368003",
            "self": false,
            "source_security_group_id": "sg-03910354970452c51",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.cluster",
            "module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.workers",
            "module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aws-eks-accelerator-for-terraform.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-642427691",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0901f70a033368003",
            "self": false,
            "source_security_group_id": "sg-0901f70a033368003",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.workers",
            "module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:524517701320:security-group/sg-046acd8ecc9621a6e",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-046acd8ecc9621a6e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "default",
            "owner_id": "524517701320",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cust01-preprod-dev-vpc-endpoint-secgrp"
            },
            "tags_all": {
              "Name": "cust01-preprod-dev-vpc-endpoint-secgrp"
            },
            "vpc_id": "vpc-0bfa9f20a79addf99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:524517701320:route-table/rtb-0c3a9d2af3af19efe",
            "id": "rtb-0c3a9d2af3af19efe",
            "owner_id": "524517701320",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.31.64.0/20",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0dd1cf67baea5e414"
              }
            ],
            "tags": {
              "Name": "cust01-preprod-dev-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "cust01-preprod-dev-vpc-private-us-east-1a"
            },
            "vpc_id": "vpc-0bfa9f20a79addf99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:524517701320:route-table/rtb-0bb6f0fe07e4407d2",
            "id": "rtb-0bb6f0fe07e4407d2",
            "owner_id": "524517701320",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.31.64.0/20",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0dd1cf67baea5e414"
              }
            ],
            "tags": {
              "Name": "cust01-preprod-dev-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Name": "cust01-preprod-dev-vpc-private-us-east-1b"
            },
            "vpc_id": "vpc-0bfa9f20a79addf99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ff858840f5c8c0f",
            "route_table_id": "rtb-0c3a9d2af3af19efe",
            "subnet_id": "subnet-0a0b965ee2a9a680d"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.private",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c2bbe6693d15a1e8",
            "route_table_id": "rtb-0bb6f0fe07e4407d2",
            "subnet_id": "subnet-0153c325d17fd5e24"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.private",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:524517701320:subnet/subnet-0a0b965ee2a9a680d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-0a0b965ee2a9a680d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "524517701320",
            "tags": {
              "Name": "cust01-preprod-dev-vpc-private-us-east-1a",
              "kubernetes.io/cluster/cust01-preprod-dev-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "cust01-preprod-dev-vpc-private-us-east-1a",
              "kubernetes.io/cluster/cust01-preprod-dev-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0bfa9f20a79addf99"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:524517701320:subnet/subnet-0153c325d17fd5e24",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-0153c325d17fd5e24",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "524517701320",
            "tags": {
              "Name": "cust01-preprod-dev-vpc-private-us-east-1b",
              "kubernetes.io/cluster/cust01-preprod-dev-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "cust01-preprod-dev-vpc-private-us-east-1b",
              "kubernetes.io/cluster/cust01-preprod-dev-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0bfa9f20a79addf99"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:524517701320:vpc/vpc-0bfa9f20a79addf99",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06f59b7e6feab5b16",
            "default_route_table_id": "rtb-0aa75d13639d6c000",
            "default_security_group_id": "sg-046acd8ecc9621a6e",
            "dhcp_options_id": "dopt-6602e21c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0bfa9f20a79addf99",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0aa75d13639d6c000",
            "owner_id": "524517701320",
            "tags": {
              "Name": "cust01-preprod-dev-vpc"
            },
            "tags_all": {
              "Name": "cust01-preprod-dev-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}